renamed util to test

--- a/dysni/pom.xml
+++ b/dysni/pom.xml
@@ -14,7 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>util</artifactId>
+			<artifactId>base</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
