--- a/base/pom.xml
+++ b/base/pom.xml
@@ -8,8 +8,8 @@
 		<artifactId>idd</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>util</artifactId>
-	<name>util</name>
+	<artifactId>base</artifactId>
+	<name>base</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
