--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -17,8 +17,37 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.4</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/src/main/resources/commons-lang3-3.4.jar</systemPath>
+      <!-- <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/commons-lang3-3.4.jar</systemPath> -->
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.2</version>
+      <!-- <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/commons-csv-1.2.jar</systemPath> -->
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.6.2</version>
+      <!-- <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/gson-2.6.2.jar</systemPath> -->
+    </dependency>
+    <dependency>
+      <groupId>info.debatty</groupId>
+      <artifactId>java-string-similarity</artifactId>
+      <version>0.13</version>
+      <!-- <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/info.debatty.java.stringsimilarity.jar</systemPath> -->
+    </dependency>
+    <dependency>
+      <groupId>com.github.mpkorstanje</groupId>
+      <artifactId>simmetrics-core</artifactId>
+      <version>4.1.0</version>
+      <!-- <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/simmetrics-core-4.1.0.jar</systemPath> -->
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <!-- <scope>system</scope> <systemPath>${project.basedir}/src/main/resources/junit-4.12.jar</systemPath> -->
     </dependency>
   </dependencies>
 </project>
