optimize results per dataset

--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -62,13 +62,13 @@
       <scope>system</scope>
       <systemPath>${project.basedir}/src/main/resources/sqlite-jdbc-3.8.11.2.jar</systemPath>
     </dependency> -->
-    <!-- <dependency>
+    <dependency>
       <groupId>com.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <version>3.8</version>
       <scope>system</scope>
       <systemPath>${project.basedir}/src/main/resources/opencsv-3.8.jar</systemPath>
-    </dependency> -->
+    </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
